test/bad/functions/args06.px

func f(Type x) def
    return
